--- a/main/templates/main/class.html
+++ b/main/templates/main/class.html
@@ -10,7 +10,7 @@
     <!-- NAVBAR -->
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
       <div class="container-fluid">
-        <a class="navbar-brand" href="index.html">
+          <a class="navbar-brand" href="{% url 'index' %}">
           <img src="{% static 'arrow.png' %}" alt="" width="30px" class="d-inline-block align-top">
         </a>
         <div class="navbar-header mx-auto">
