--- a/main/templates/main/index.html
+++ b/main/templates/main/index.html
@@ -21,7 +21,7 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="index.html">Pitt-Connect</a>
+                <a class="nav-link active" aria-current="page" href="{% url 'index' %}">Pitt-Connect</a>
             </li>
           </ul>
         </div>
@@ -34,70 +34,32 @@
 
     <!-- Cards -->
     <div class="mx-auto my-5" style="width: 75rem;">
+      {% for class in classes %}
+      {% ifequal forloop.counter0|divisibleby:"3" True %}
       <div class="row row-cols-1 row-cols-md-3 g-4">
-        <a href="class.html" class="remove-style">
+      {% endifequal %}
+          <a href="{% url 'class_page' class.id %}" class="remove-style">
           <div class="col">
             <div class="card">
-                <img src="{% static '100w/blueSquare.png' %}" class="card-img-top" alt="...">
+              {% ifequal forloop.counter0|divisibleby:"2" True %}
+              <img src="{% static '100w/blueSquare.png' %}" class="card-img-top" alt="...">
+              {% else %}
+              <img src="{% static '100w/yellowSquare.png' %}" class="card-img-top" alt="...">
+              {% endifequal %}
               <div class="card-body">
-                <h5 class="card-title">CS 0449</h5>
-                <h5 class="card-title">Intro to Systems Software</h5>
-                <p class="card-text">Vinicius Petrucci</p>
+                  <h5 class="card-title">{{ class.department }} {{ class.code }}</h5>
+                <h5 class="card-title">{{ class.name }}</h5>
+                <p class="card-text">{{ class.instructor }}</p>
               </div>
             </div>
           </div>
         </a>
-        <div class="col">
-          <div class="card">
-              <img src="{% static '100w/yellowSquare.png' %}" class="card-img-top" alt="...">
-            <div class="card-body">
-              <h5 class="card-title">COURSE NUM</h5>
-              <h5 class="card-title">COURSE_NAME</h5>
-              <p class="card-text">INSTRUCTOR NAME</p>
-            </div>
-          </div>
-        </div>
-        <div class="col">
-          <div class="card">
-              <img src="{% static '100w/blueSquare.png' %}" class="card-img-top" alt="...">
-            <div class="card-body">
-              <h5 class="card-title">COURSE NUM</h5>
-              <h5 class="card-title">COURSE_NAME</h5>
-              <p class="card-text">INSTRUCTOR NAME</p>
-            </div>
-          </div>
-        </div>
-        <div class="col">
-          <div class="card">
-              <img src="{% static '100w/yellowSquare.png' %}" class="card-img-top" alt="...">
-            <div class="card-body">
-              <h5 class="card-title">COURSE NUM</h5>
-              <h5 class="card-title">COURSE_NAME</h5>
-              <p class="card-text">INSTRUCTOR NAME</p>
-            </div>
-          </div>
-        </div>
-        <div class="col">
-          <div class="card">
-              <img src="{% static '100w/blueSquare.png' %}" class="card-img-top" alt="...">
-            <div class="card-body">
-              <h5 class="card-title">COURSE NUM</h5>
-              <h5 class="card-title">COURSE_NAME</h5>
-              <p class="card-text">INSTRUCTOR NAME</p>
-            </div>
-          </div>
-        </div>
-        <div class="col">
-          <div class="card">
-              <img src="{% static '100w/yellowSquare.png' %}" class="card-img-top" alt="...">
-            <div class="card-body">
-              <h5 class="card-title">COURSE NUM</h5>
-              <h5 class="card-title">COURSE_NAME</h5>
-              <p class="card-text">INSTRUCTCOURSE NUM</p>
-            </div>
-          </div>
-        </div>
+      {% endfor %}
+      {% for class in classes %}
+      {% ifequal forloop.counter0|divisibleby:"3" True %}
       </div>
+      {% endifequal %}
+      {% endfor %}
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.6.0/dist/umd/popper.min.js" integrity="sha384-KsvD1yqQ1/1+IA7gi3P0tyJcT3vR+NdBTt13hSJ2lnve8agRGXTTyNaBYmCR/Nwi" crossorigin="anonymous"></script>
