--- a/main/templates/main/index.html
+++ b/main/templates/main/index.html
@@ -25,7 +25,7 @@
             </li>
           </ul>
         </div>
-        <form class="d-flex" method="get" action="class_search.html">
+        <form class="d-flex" method="get" action="{% url 'search' %}">
           <input class="form-control me-2" type="search" placeholder="Course #" aria-label="Search">
           <button class="btn btn-outline-success" type="submit">Search</button>
         </form>
