--- a/main/templates/main/class_search.html
+++ b/main/templates/main/class_search.html
@@ -15,7 +15,7 @@
           <img src="{% static 'arrow.png' %}" alt="" width="30px" class="d-inline-block align-top">
         </a>
         <div class="navbar-header mx-auto">
-          Results (#)
+            Class Search
         </div>
         <form class="d-flex" method="post" action="{% url 'search' %}">
           {% csrf_token %}
@@ -29,7 +29,9 @@
     </nav>
 
     {% if error %}
-    <p>{{ error }}</p>
+    <div class="container">
+        <p class="text-danger">{{ error }}</p>
+    </div>
     {% endif %}
 
     <div class="container">
