--- a/main/templates/main/welcome.html
+++ b/main/templates/main/welcome.html
@@ -5,7 +5,7 @@
   <head>
     <meta charset="utf-8">
       <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
-      <link rel="stylesheet" href="../../../static/css/welcome.css">
+      <link rel="stylesheet" href="{% static 'css/welcome.css' %}">
     <title>Pitt Connect</title>
   </head>
   <body>
@@ -33,22 +33,21 @@
         <h1>Welcome to Pitt Connect!</h1>
       </div>
       <div class="d-flex justify-content-center my-3">
-        <img src="../../../static/pLogo.png" alt="">
+          <img src="{% static 'pLogo.png' %}" alt="">
       </div>
       <div class="d-flex justify-content-center my-5">
         <h3>The one stop for all your class resources</h3>
       </div>
       <div class="d-flex justify-content-center align-items-center my-3">
-        <img src="../../../static/whiteZoom.png" alt="" class="mx-3">
-        <img src="../../../static/whiteDiscord.png" alt="" class="mx-3">
-        <img src="../../../static/whiteSlack.png" alt="" class="mx-3">
-        <img src="../../../static/whiteGroupme.png" alt="" class="mx-3">
+          <img src="{% static 'whiteZoom.png' %}" alt="" class="mx-3">
+          <img src="{% static 'whiteDiscord.png' %}" alt="" class="mx-3">
+          <img src="{% static 'whiteSlack.png' %}" alt="" class="mx-3">
+          <img src="{% static 'whiteGroupme.png' %}" alt="" class="mx-3">
       </div>
       <div class="d-flex justify-content-center">
-        <a href="#"><button type="button" name="login" class="btn btn-success my-5 mx-2">Log In</button></a>
-        <a href="#"><button type="button" name="signup" class="btn btn-primary my-5 mx-2">Sign Up</button></a>
+          <a href="{% url 'login' %}"><button type="button" name="login" class="btn btn-success my-5 mx-2">Log In</button></a>
+          <a href="{% url 'signup' %}"><button type="button" name="signup" class="btn btn-primary my-5 mx-2">Sign Up</button></a>
       </div>
-  outline
 
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.6.0/dist/umd/popper.min.js" integrity="sha384-KsvD1yqQ1/1+IA7gi3P0tyJcT3vR+NdBTt13hSJ2lnve8agRGXTTyNaBYmCR/Nwi" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.min.js" integrity="sha384-nsg8ua9HAw1y0W1btsyWgBklPnCUAFLuTMS2G72MMONqmOymq585AcH49TLBQObG" crossorigin="anonymous"></script>
