--- a/main/templates/main/index.html
+++ b/main/templates/main/index.html
@@ -26,10 +26,10 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav me-auto">
             <li class="nav-item">
-                <a class="nav-link link-danger" aria-current="page" href="{% url 'index' %}" style="color: #dc3545;">Logout</a>
+                <a class="nav-link link-danger" aria-current="page" href="{% url 'logout' %}" style="color: #dc3545;">Logout</a>
             </li>
             <li class="nav-item">
-              <a href="#" class="nav-link link-primary" style="color: #0d6efd;">Find Courses</a>
+                <a href="{% url 'search' %}" class="nav-link link-primary" style="color: #0d6efd;">Find Courses</a>
             </li>
           </ul>
         </div>
@@ -37,6 +37,7 @@
     </nav>
 
     <!-- Cards -->
+    {% if user.profile.classes %}
     <div class="container mx-auto my-5">
       <div class="row g-4">
         {% for class in classes %}
@@ -55,7 +56,7 @@
                   {{ class.instructor }}
                 </p>
                 </a>
-                <div class="d-flex justify-content-end my-2"><a href="#" class="btn btn-outline-danger stretched-link remove-btn" style="display: none">Remove</a></div>
+                <div class="d-flex justify-content-end my-2"><a href="{% url 'remove' class.id %}" class="btn btn-outline-danger stretched-link remove-btn" style="display: none">Remove</a></div>
               </div>
             </div>
           </div>
@@ -63,6 +64,14 @@
       </div>
       <div class="d-flex justify-content-center my-3"><button type="button" class="btn btn-primary" name="button" id="edit-btn">Edit Courses</button></div>
     </div>
+    <!-- user should be authenticated anyway to be on this screen -->
+    {% else %}
+    <a href="{% url 'search' %}">
+      <div class="d-flex justify-content-center my-3">
+          <button type="button" class="btn btn-primary" name="button" id="edit-btn">Add Courses</button>
+      </div>
+    </a>
+    {% endif %}
     <script type="" src="{% static 'js/index.js' %}"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.6.0/dist/umd/popper.min.js" integrity="sha384-KsvD1yqQ1/1+IA7gi3P0tyJcT3vR+NdBTt13hSJ2lnve8agRGXTTyNaBYmCR/Nwi" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.min.js" integrity="sha384-nsg8ua9HAw1y0W1btsyWgBklPnCUAFLuTMS2G72MMONqmOymq585AcH49TLBQObG" crossorigin="anonymous"></script>
