add two fields to new class form

--- a/main/templates/main/class_form.html
+++ b/main/templates/main/class_form.html
@@ -148,6 +148,14 @@
           <span class="input-group-text" id="basic-addon3">Gradescope Link</span>
           <input type="text" class="form-control" id="basic-url" aria-describedby="basic-addon3" name="gradescopeLink">
         </div>
+        <div class="container1 input-group mb-3">
+          <span class="input-group-text" id="basic-addon3">Box Link</span>
+          <input type="text" class="form-control" id="basic-url" aria-describedby="basic-addon3" name="boxLink">
+        </div>
+        <div class="container1 input-group mb-3">
+          <span class="input-group-text" id="basic-addon3">Other Website</span>
+          <input type="text" class="form-control" id="basic-url" aria-describedby="basic-addon3" name="otherLink">
+        </div>
         <div class="d-flex justify-content-center my-3"><button type="submit" class="btn btn-primary">Submit</button></div>
       </form>
     </div>
