add new logo to website

--- a/main/templates/main/index.html
+++ b/main/templates/main/index.html
@@ -13,7 +13,7 @@
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
       <div class="container-fluid">
         <a class="navbar-brand" href="#">
-            <img src="{% static 'pLogo.png' %}" alt="" width="30px" class="d-inline-block align-top">
+            <img src="{% static 'pitt-connectLogo.png' %}" alt="" width="30px" class="d-inline-block align-top">
         </a>
         <ul class="navbar-nav">
           <li class="nav-item">
