--- a/main/templates/main/welcome.html
+++ b/main/templates/main/welcome.html
@@ -13,7 +13,7 @@
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
       <div class="container-fluid">
         <a class="navbar-brand" href="#">
-            <img src="{% static 'pLogo.png' %}" alt="" width="30px" class="d-inline-block align-top">
+            <img src="{% static 'pitt-connectLogo.png' %}" alt="" width="30px" class="d-inline-block align-top">
         </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -28,15 +28,15 @@
       </div>
     </nav>
 
-    <div class="container">
+    <div class="container p-5">
       <div class="d-flex justify-content-center my-3">
         <h1>Welcome to Pitt Connect!</h1>
       </div>
       <div class="d-flex justify-content-center my-3">
-          <img src="{% static 'pLogo.png' %}" alt="">
+          <img src="{% static 'pitt-connectYellowLogo.png' %}" alt="">
       </div>
       <div class="d-flex justify-content-center my-5">
-        <h3>The one stop for all your class resources</h3>
+        <h3><strong>One</strong> stop for all class resources</h3>
       </div>
       <div class="d-flex justify-content-center align-items-center my-3">
           <img src="{% static 'whiteZoom.png' %}" alt="" class="mx-3">
