--- a/app/templates/app/class_search.html
+++ b/app/templates/app/class_search.html
@@ -50,7 +50,7 @@
         <tbody>
           {% for class in classes %}
           <tr>
-            <th scope="row">1</th>
+            <th scope="row">{{ forloop.counter }}</th>
             <td>{{ class.department }} {{ class.code }}</td>
             <td>{{ class.instructor }}</td>
             <td>{{ class.lecture_days }} {{ class.lecture_time }}</td>
